[gd_scene load_steps=15 format=3 uid="uid://bxb1anygh4xmi"]

[ext_resource type="Script" uid="uid://heajr8143rgg" path="res://Scenes/GameObject/RatEnemy/rat_enemy.gd" id="1_bp212"]
[ext_resource type="PackedScene" uid="uid://c33wwr3ktf1uq" path="res://Scenes/Component/MeleeAIMovementComponent/melee_ai_movement_component.tscn" id="2_kgn57"]
[ext_resource type="PackedScene" uid="uid://c7cuj2fj0ontc" path="res://Scenes/Component/HealthComponent/health_component.tscn" id="3_1am60"]
[ext_resource type="PackedScene" uid="uid://cnq32dmcgppq" path="res://Scenes/Component/HealthBarComponent/health_bar_component.tscn" id="4_i4lby"]
[ext_resource type="PackedScene" uid="uid://cp4183sul1eye" path="res://Scenes/Component/HitFlashComponent/hit_flash_component.tscn" id="5_kgn57"]
[ext_resource type="PackedScene" uid="uid://id2nj8lc76jn" path="res://Scenes/Component/LootDropComponent/loot_drop_component.tscn" id="5_wato2"]
[ext_resource type="PackedScene" uid="uid://c4d6ureftk44p" path="res://Scenes/Component/HurtboxComponent/hurtbox_component.tscn" id="6_khfe4"]
[ext_resource type="Texture2D" uid="uid://83ykp6ae7pi0" path="res://Scenes/GameObject/RatEnemy/rat_enemy.png" id="7_3aegw"]
[ext_resource type="PackedScene" uid="uid://yomehlmkvd2k" path="res://Scenes/Component/DeathComponent/death_component.tscn" id="8_vb34m"]

[sub_resource type="Animation" id="Animation_y613a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_72btf"]
resource_name = "Walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(-1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0436332, -0.0436332]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3amr6"]
_data = {
&"RESET": SubResource("Animation_y613a"),
&"Walk": SubResource("Animation_72btf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3j2k7"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_arl0f"]
radius = 6.0

[node name="RatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_bp212")
max_speed = 65

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3amr6")
}
autoplay = "Walk"

[node name="MeleeAiMovementComponent" parent="." instance=ExtResource("2_kgn57")]

[node name="HealthComponent" parent="." instance=ExtResource("3_1am60")]

[node name="LootDropComponent" parent="." instance=ExtResource("5_wato2")]

[node name="HitFlashComponent" parent="." instance=ExtResource("5_kgn57")]

[node name="HealthBarComponent" parent="." instance=ExtResource("4_i4lby")]

[node name="HurtboxComponent" parent="." instance=ExtResource("6_khfe4")]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_3j2k7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_arl0f")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("7_3aegw")
offset = Vector2(0, -4)

[node name="DeathComponent" parent="." instance=ExtResource("8_vb34m")]
